<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">云收银</string>
    <string name="copyright">cardinfolink 2015</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_auto_login">自动登录</string>
    <string name="register_register">注册</string>
    <string name="register_next">提交</string>
    <string name="register_hint_qr_password">请确认密码</string>
    <string name="register_hint_email">请输入您的邮箱</string>
    <string name="register_next_finished">完成</string>
    <string name="register_next_hint_openbank">请输入您的开户行,精准到支行</string>
    <string name="register_next_hint_name">请输入您的姓名</string>
    <string name="register_next_hint_banknum">请输入您的银行卡号</string>
    <string name="register_next_hint_phonenum">请输入您的手机号</string>
    <string name="register_next_directions">       *请完善以下信息，才能正常使用收款功能。我们会将您的收款金额在2个工作日内清算到您的账户中（节假日不清算），费率为0.6%（即每交易100元收取手续费0.6元）。

*云收银将严格遵守国家相关法律法规，承诺不将您的账户信息以任何形式透露给第三方。</string>
    <string name="detail_refd">交易退款</string>
    <string name="update_password">修改密码</string>
    <string name="update_password_hint_oldpwd">当前密码</string>
    <string name="update_password_hint_newpwd">新密码</string>
    <string name="update_password_hint_qr_newpwd">确认新密码</string>
    <string name="update_account">账号修改</string>
    <string name="qr_update">确认修改</string>
    <string name="limit_increase">限额提升</string>
    <string name="limit_increase_directions">       *为确保账户安全，请确认以下信息才能正常提升您的收款额度。我们会有工作人员在3个工作日内电话与您联系，感谢配合。\n
        *云收银将严格遵守国家相关法律法规，承诺不将您的账户信息以任何形式透露给第三方。</string>
    <string name="qr_commit">确认提交</string>
    <string name="dialog_trade_success">交易成功\n感谢购买！</string>
    <string name="dialog_trade_nopay">交易未支付,请支付后查询！</string>
    <string name="dialog_trade_fail">本次交易出错\n支付失败！</string>
    <string name="server_timeout">服务器超时，请检查网络！</string>
    <string name="username_password_error">用户名或密码错误！</string>
    <string name="press_again_exit">再按一次退出程序！</string>
    <string name="username_exist">用户名已存在！</string>
    <string name="activate_sentto_email">激活链接将发送到该邮箱:\n\n</string>
    <string name="create_qrcode_activity_open_wx">请打开微信\n扫一扫</string>
    <string name="create_qrcode_activity_open_ali">请打开支付宝钱包\n扫一扫</string>
    <string name="create_qrcode_activity_amount">本次收款金额：￥</string>
    <string name="detail_activity_busicd_pay">支付</string>
    <string name="detail_activity_busicd_refd">退款</string>
    <string name="detail_activity_trade_status_success">交易成功</string>
    <string name="detail_activity_trade_status_fail">交易失败</string>
    <string name="detail_activity_trade_status_nopay">正在处理</string>
    <string name="main_activity_menu_scancode">扫码支付</string>
    <string name="main_activity_menu_transmange">交易管理</string>
    <string name="main_activity_menu_passwordupdate">密码修改</string>
    <string name="main_activity_menu_accountupdate">账户修改</string>
    <string name="main_activity_menu_webbill">网页账单</string>
    <string name="main_activity_menu_safeexit">安全退出</string>
    <string name="spinner_select_province">开户行所在省份</string>
    <string name="spinner_select_city">开户行所在城市</string>
    <string name="spinner_select_bank">请选择开户银行</string>
    <string name="spinner_select_bankbranch">请选择开户支行</string>
    <string name="alert_error_username_cannot_empty">用户名不能为空!</string>
    <string name="alert_error_password_cannot_empty">密码不能为空!</string>
    <string name="alert_error_email_cannot_empty">邮箱不能为空!</string>
    <string name="alert_error_email_format_error">邮箱格式不正确!</string>
    <string name="alert_error_password_short_six">密码不能小于六位</string>
    <string name="alert_error_qrpassword_error">"确认密码不一致!"</string>
    <string name="alert_error_province_cannot_empty">开户行所在省份不能为空!</string>
    <string name="alert_error_city_cannot_empty">开户行所在城市不能为空!</string>
    <string name="alert_error_bank_cannot_empty">开户行不能为空!</string>
    <string name="alert_error_bankbranch_cannot_empty">开户支行不能为空!</string>
    <string name="alert_error_name_cannot_empty">姓名不能为空!</string>
    <string name="alert_error_banknum_cannot_empty">银行卡号不能为空!</string>
    <string name="alert_error_banknum_format_error">请输入正确的银行卡号!</string>
    <string name="alert_error_phonenum_cannot_empty">手机号不能为空!</string>
    <string name="alert_error_phonenum_format_error">请输入正确的手机号!</string>
    <string name="alert_error_commit_error">提交失败</string>
    <string name="alert_error_user_no_activate">账号未激活!</string>
    <string name="alert_error_username_password_error">用户名或密码错误!</string>
    <string name="alert_error_sign_fail">签名错误,报文被串改!</string>
    <string name="alert_error_username_no_exist">用户名不存在!</string>
    <string name="alert_error_username_exist">用户名已存在!</string>
    <string name="alert_error_system_error">对不起,系统出现错误!</string>
    <string name="alert_error_old_password_error">原密码错误!</string>
    <string name="alert_update_success">修改成功!</string>
    <string name="alert_error_old_password_cannot_empty">原密码不能为空!</string>
    <string name="alert_error_old_password_short_six">原密码不能少于6位!</string>
    <string name="alert_error_new_password_cannot_empty">新密码不能为空!</string>
    <string name="alert_error_new_password_short_six">新密码不能少于6位!</string>
    <string name="refd_dialog_refd_max">本次可退款额度：¥</string>
    <string name="refd_dialog_refd_success">退款成功!</string>
    <string name="refd_dialog_nextday_not_refd">隔日不能退款!</string>
    <string name="refd_dialog_refd_fail">退款失败!</string>
    <string name="refd_dialog_amount_cannot_empty">金额不能为空!</string>
    <string name="refd_dialog_amount_not_enough">金额不能小于0.01元</string>
    <string name="refd_dialog_amount_foramt_error">金额格式错误</string>
    <string name="refd_dialog_amount_not_exceeds_max">金额不能超过%s元</string>
    <string name="refd_dialog__password_error">密码错误!</string>
    <string name="scancode_view_create_code">生成二维码</string>
    <string name="scancode_view_scaning_code">开始扫描</string>

    <!-- 新信息-->
    <string name="qr_amount_exceed">金额过大!</string>
    <string name="qr_amount_nonzero">金额不能为零!</string>
    <string name="txn_all">全部交易</string>
    <string name="txn_success">交易成功</string>
    <string name="txn_failed">交易失败</string>
    <string name="txn_amount">交易金额</string>
    <string name="custom_account">客户账户:</string>
    <string name="txn_time">交易时间:</string>
    <string name="txn_status">交易状态:</string>
    <string name="txn_status_success">交易成功</string>
    <string name="txn_order_num">商户订单:</string>
    <string name="txn_status_refresh">刷新</string>
    <string name="txn_bill_info">账单信息</string>
    <string name="txn_description">交易摘要:</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="txn_total_times">交易笔数</string>
    <string name="txn_total_amount">交易总金额:</string>
    <string name="txn_currency">元</string>
    <string name="txn_refund">退款</string>
    <string name="txn_unit">笔</string>
    <string name="login">登录</string>
    <string name="clear">清空</string>
    <string name="delete">删除</string>
    <string name="begin_scan">开始扫描</string>
    <string name="my_bill">我的账单</string>

</resources>