<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/my_bill"
        android:textColor="@color/white"
        android:textSize="@dimen/trade_manager_bill_textsize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rbg_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <RadioButton
                android:id="@+id/radio_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb1_bg_selector"
                android:button="@null"
                android:checked="true"
                android:padding="7dp"
                android:text="@string/txn_all"
                android:textColor="@color/rb_txt"
                android:textSize="@dimen/trade_manager_radio_btn_textsize"/>

            <RadioButton
                android:id="@+id/radio_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb2_bg_selector"
                android:button="@null"
                android:padding="7dp"
                android:text="@string/txn_success"
                android:textColor="@color/rb_txt"
                android:textSize="@dimen/trade_manager_radio_btn_textsize"/>

            <RadioButton
                android:id="@+id/radio_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rb3_bg_selector"
                android:button="@null"
                android:padding="7dp"
                android:text="@string/txn_failed"
                android:textColor="@color/rb_txt"
                android:textSize="@dimen/trade_manager_radio_btn_textsize"/>


        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/bill_tips"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/trade_manager_text_height"
            android:background="@color/gray2"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/trade_manager_text_textsize" />


        <com.handmark.pulltorefresh.library.PullToRefreshListView
            android:id="@+id/pull_refresh_list"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

    </LinearLayout>

</LinearLayout>
