<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_blue"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/bill_top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/trade_manager_detail_custom_btn_height">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="20dp"
            android:src="@drawable/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/txn_bill_info"
            android:textColor="@color/white"
            android:textSize="@dimen/trade_manager_detail_activity_title_textsize"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/bill_top"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/bill_top"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/paylogo"
                android:layout_width="@dimen/trade_manager_item_imageview_width"
                android:layout_height="@dimen/trade_manager_item_imageview_width"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp" />

            <TextView
                android:id="@+id/tradefrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/trade_manager_detail_custom_textsize" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/refresh"
                    android:layout_width="@dimen/trade_manager_item_btn_with"
                    android:layout_height="@dimen/trade_manager_item_btn_hight"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/white_selector"
                    android:padding="5dp"
                    android:text="@string/txn_status_refresh"
                    android:textColor="@color/white"
                    android:textSize="@dimen/trade_manager_item_result_textsize" />

            </RelativeLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txn_amount"
                android:textColor="@color/black"
                android:textSize="@dimen/trade_manager_detail_custom_btn_textsize" />

            <TextView
                android:id="@+id/tradeamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trade_manager_detail_activity_title_textsize"
                android:text="￥100"
                android:textColor="@color/red"
                android:textSize="@dimen/trade_manager_detail_trade_textsize"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/gray1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_account"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />

                <TextView
                    android:id="@+id/consumer_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="330961193@qq.com"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txn_time"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />

                <TextView
                    android:id="@+id/tradedate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2015-09-07 13:56:13"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trade_manager_detail_activity_title_textsize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txn_status"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />

                <TextView
                    android:id="@+id/tradestatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="交易成功"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trade_manager_detail_activity_title_textsize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txn_order_num"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />

                <TextView
                    android:id="@+id/ordernum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="20150907135613"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/trade_manager_detail_activity_title_textsize"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txn_description"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />

                <TextView
                    android:id="@+id/goodinfo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/gray"
                    android:textSize="@dimen/trade_manager_detail_custom_textsize" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_refd"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/trade_manager_detail_custom_btn_height"
                    android:layout_marginLeft="@dimen/trade_manager_detail_custom_btn_margin"
                    android:layout_marginRight="@dimen/trade_manager_detail_custom_btn_margin"
                    android:background="@drawable/white_selector"
                    android:text="@string/detail_refd"
                    android:textColor="@color/white"
                    android:textSize="@dimen/trade_manager_detail_custom_btn_textsize" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/showmoney_dialog"></include>
</RelativeLayout>