<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1EBED6" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:maxHeight="80dp"
            android:minHeight="40dp"
            android:src="@drawable/logo" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp" >

            <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/name" />

                <EditText
                    android:id="@+id/login_username"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:inputType="textEmailAddress"
                    android:hint="@string/login_hint_username"
                    android:singleLine="true"
                    />
            </TableRow>

            <TableRow              
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/bluemain_bg"
                android:gravity="center_vertical" >

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="50dp"
                    android:background="@null"
                    android:ems="10"
                    android:paddingLeft="15dp"
                    android:textColor="#FFFFFF" 
                    android:textColorHint="#eeeeee"
                    android:inputType="textPassword"
                    android:hint="@string/login_hint_password"
                    android:singleLine="true"
                    />
            </TableRow>
        </TableLayout>
        
           <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content" 
       android:orientation="horizontal"
       android:layout_marginTop="20dp"
       android:layout_marginLeft="30dp"
         >
       <CheckBox
       android:id="@+id/checkbox_auto_login"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content" 
       android:text="@string/login_auto_login"
       android:button="@drawable/checkbox"
       android:textColor="#ffffff"
           />
       
      
       </LinearLayout>
       
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center" >

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="登录"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="@drawable/blue_selector" 
            android:onClick="BtnLoginOnClick"
            />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="注册"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:background="@drawable/blue_selector"
            android:layout_marginLeft="25dp" 
            android:onClick="BtnRegisterOnClick"
            />
    </LinearLayout>       
       
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="50dp"
            android:minHeight="20dp"
            android:text="@string/copyright"
            android:textColor="#ffffff"
            android:textSize="17sp" />
    </LinearLayout>
    
      <include layout="@layout/showmoney_dialog"></include> 
    
</RelativeLayout>